tests/run/error_unknown_fn.ig
// error_unknown_fn.ig — calling an undefined function is a compile error.
fn main() -> int { return nope(1) }
